chore!: fix sonar issues