@@ -1,7 +1,6 @@
 package it.portus.ms.commons.mappers;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnClass;
 import org.springframework.data.domain.Page;
 import org.springframework.hateoas.EntityModel;
@@ -18,20 +17,13 @@ public class PageToPagedModelMapper extends AbstractPageMapper {
     super(mappers);
   }
 
-  public <S, T> PagedModel<EntityModel<T>> toPagedModel(Page<S> sourcePage, Class<T> targetClass) {
-    return toPagedModel(sourcePage, targetClass, new Link[] {});
-  }
-
   public <S, T> PagedModel<EntityModel<T>> toPagedModel(
       Page<S> sourcePage, Class<T> targetClass, Link... links) {
 
     PageContentMapper<S, T> mapper = resolveMapper(targetClass);
 
     List<EntityModel<T>> content =
-        sourcePage.getContent().stream()
-            .map(mapper::toDTO)
-            .map(EntityModel::of)
-            .collect(Collectors.toList());
+        sourcePage.getContent().stream().map(mapper::toDTO).map(EntityModel::of).toList();
 
     PageMetadata metadata =
         new PageMetadata(
